@@ -6,7 +6,7 @@
     "major_version": 1,
     "minor_version": 1,
     "generator_name": "crystal-facet-uml",
-    "generator_version": "1.52.1"
+    "generator_version": "1.53.0"
   }
   ,
   "views":
@@ -9075,7 +9075,7 @@
         "id": 135,
         "main_type": 401,
         "type": "Trace",
-        "stereotype": "could_trace",
+        "stereotype": "could-trace",
         "name": "rejected alternative",
         "description": [
                 ""
